<resources>
    <string name="app_name">DO SOPT by librarywon</string>
    <!-- signup -->
    <string name="signup_title">SIGN UP</string>
    <string name="signup_id">ID</string>
    <string name="signup_id_hint">id를 입력하세요</string>
    <string name="signup_pw">PW</string>
    <string name="signup_hint">pw를 입력하세요</string>
    <string name="signup_nickname">NICKNAME</string>
    <string name="signup_nickname_hint">닉네임을 입력하세요</string>
    <string name="signup_hobby">HOBBY</string>
    <string name="signup_hobby_hint">취미를 입력하세요</string>
    <string name="signup_do_signup">회원가입 하기</string>
    <string name="signup_fail">회원가입에 실패했습니다.</string>
    <string name="signup_success">회원가입에 성공했습니다.</string>
    <string name="signup_check_format">ID PW 조건을 다시 확인해주세요</string>

    <!-- login -->
    <string name="login_title">Welcome to DO SOPT!</string>
    <string name="login_id">ID</string>
    <string name="login_id_hint">id를 입력하세요</string>
    <string name="login_pw">PW</string>
    <string name="login_pw_hint">pw를 입력하세요</string>
    <string name="login_button_signin">로그인</string>
    <string name="login_button_signup">회원가입</string>
    <string name="login_fail">아이디와 비밀번호를 다시 확인해주세요.</string>
    <string name="login_success">로그인에 성공했습니다.</string>
    <string name="login_auto_login">자동 로그인</string>

    <!-- mypage -->
    <string name="mypage_name">서재원</string>
    <string name="mypage_comment">안녕하세요 반갑습니다 %s입니다.</string>
    <string name="mypage_title">DO SOPT</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="main_back_press">"뒤로 가기 버튼을 한 번 더 누르면 앱이 종료됩니다."</string>
    <string name="mypage_load_info_sucess">"유저 정보를 가져오는데 성공하였습니다."</string>
    <string name="mypage_load_info_error">"유저 정보를 가져오는데 실패하였습니다."</string>

    <!-- menu/main -->
    <string name="menu_main_do_android">DO ANDROID</string>
    <string name="menu_main_home">홈</string>
    <string name="menu_main_mypage">마이페이지</string>
    <string name="mypage_id">ID</string>
    <string name="mypage_hobby">취미</string>
    <string name="user_profile_image">user profile image</string>
    <string name="item_friend_gift">선물하기</string>
    <string name="login_welcome_user">%d번째 회원님 환영합니다</string>
    <string name="item_user_hello">반갑습니다.</string>
</resources>